--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-server.port=${PORT:8080}
+server.port=${PORT:8081}
+
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
-# PostgreSQL configuration.
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = postgres
-spring.datasource.password = password
-spring.jpa.hibernate.ddl-auto = update
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
+
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:mysql://deadcheck.cm4tditnav3k.eu-west-1.rds.amazonaws.com:3306/deadcheck?createDatabaseIfNotExist=true
+spring.datasource.username=admin
+spring.datasource.password=T0_5-1zf_N
+spring.jpa.hibernate.ddl-auto=update
