--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,8 @@ vaadin.launch-browser=true
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://deadcheck.cm4tditnav3k.eu-west-1.rds.amazonaws.com:3306/deadcheck?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://deadcheck.crq3d0lrdqcy.eu-west-3.rds.amazonaws.com:3306/deadcheck?createDatabaseIfNotExist=true
 spring.datasource.username=admin
-spring.datasource.password=T0_5-1zf_N
+spring.datasource.password=j0qxHr1Y-Dy$zXBtl.WaZuGkF5n:
 spring.jpa.hibernate.ddl-auto=update
+
